tests/suite/snapshots/suite__check__tests__check__bad_invariant_initialize.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_invariant_initialize.xi:6:14]
   │
 6 │     a: A[] = foo()
   ·     ───┬──   ──┬──  
   ·        ╰──────────── Expected A[] because of this
   ·                │    
   ·                ╰──── Expected A[] but found C[]
───╯

